--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,6 +1,6 @@
 jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/social
 jdbc.user=postgres
-jdbc.password=postgres
+jdbc.password=6833
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
